--- a/admin/account/index.html
+++ b/admin/account/index.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Total Residents Report</title>
+    <title>Completed Transactions</title>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-    <!-- Optional Scripts (comment out if unused) -->
-    <!-- <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script> -->
 
     <!-- Additional Scripts -->
     <script src="../../style/js/plugin.js"></script>
@@ -18,10 +14,23 @@
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="../../sessionstorage.js"></script>
-    <script src="index.js"></script>
+    <script src="completedTransactions.js" defer></script>
 
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
+    <style>
+      .table-responsive {
+  width: 100%;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+.table {
+  min-width: 1000px; /* Or adjust based on expected column count */
+  width: 100%;
+}
+
+    </style>
   </head>
 
   <body>
@@ -42,20 +51,30 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1>Total Residents Report</h1>
+              <h1>Completed Transactions</h1>
             </div>
 
             <div class="form">
               <div class="table-responsive">
-                <table class="table table-striped table-bordered">
+                <table id="transactionsTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
-                      <th>Resident Type</th>
-                      <th>Count</th>
+                      <th>Card No</th>
+                      <th>Issued To</th>
+                      <th>Address</th>
+                      <th>Email</th>
+                      <th>Mobile</th>
+                      <th>Booking ID</th>
+                      <th>Amount</th>
+                      <th>Category</th>
+                      <th>Status</th>
+                      <th>Booked By</th>
                     </tr>
                   </thead>
-                  <tbody id="totalResidents">
-                    <!-- Populated by JavaScript -->
+                  <tbody>
+                    <tr>
+                      <td colspan="10">Loading...</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -64,5 +83,6 @@
         </div>
       </div>
     </div>
+
   </body>
 </html>
