--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -1,68 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Adhyayan Report</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Adhyayan Report</title>
 
-    <!-- Load jQuery first -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <!-- Load jQuery first -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
+  <!-- Config and Header Scripts -->
+  <!-- <script src="../../style/js/config.js"></script>
+  <script src="../../style/js/header.js"></script> -->
 
-    <!-- Additional Styles and Scripts -->
-    <script src="../../style/js/plugin.js"></script>
-    <script src="../../style/js/bootstrap-datepicker.min.js"></script>
-    <script src="../../style/js/clockpicker.js"></script>
-    <script src="../../style/js/custom.js"></script>
-    <script src="/sessionstorage.js"></script>
-    <script src="adhyayanReport.js"></script>
-  </head>
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="logout">
-          <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
-        </div>
+  <!-- Styles -->
+  <link rel="stylesheet" href="../../style/css/styles.css" />
+
+  <!-- Additional Scripts -->
+  <script src="../../style/js/plugin.js"></script>
+  <script src="../../style/js/bootstrap-datepicker.min.js"></script>
+  <script src="../../style/js/clockpicker.js"></script>
+  <script src="../../style/js/custom.js"></script>
+  <script src="/sessionstorage.js"></script>
+  <script src="adhyayanReport.js"></script>
+</head>
+<body>
+  <div class="header">
+    <div class="container">
+      <div class="logout">
+        <a href="javascript:void(0);" onclick="history.back()">Back</a>
+        &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
+        <a id="homelink" href="/admin/">Logout</a>
       </div>
     </div>
+  </div>
 
-    <div class="middlecontent">
+  <div class="middlecontent">
+    <div class="container">
       <div class="whitesec">
-        <div class="frm-head">
-          <h1><br />Adhyayan Report</h1>
-        </div>
-        <div class="form">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="table">
-                <table
-                  id="waitlistTable"
-                  class="table table-striped table-bordered"
-                >
-                  <thead>
-                    <tr>
-                      <th>Serial No</th>
-                        <th>Adhyayan Name</th>
-                        <th>Swadhyay Karta</th>
-                        <th>Registration Count</th>
-                        <th>Max Count</th>
-                        <th>Status</th>
-                        <th>Action</th>
-                    </tr>
-                  </thead>
-                  <tbody id="adhyayanTable">
-                    <!-- Data will be populated here -->
-                  </tbody>
-                </table>
-              </div>
+        <div class="inner-padding">
+          <div class="frm-head">
+            <h1>Adhyayan Report</h1>
+          </div>
+
+          <div class="form">
+            <div class="table-responsive">
+              <table id="waitlistTable" class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th>Serial No</th>
+                    <th>Adhyayan Name</th>
+                    <th>Swadhyay Karta</th>
+                    <th>Registration Count</th>
+                    <th>Max Count</th>
+                    <th>Status</th>
+                    <th>Action</th>
+                  </tr>
+                </thead>
+                <tbody id="adhyayanTable">
+                  <!-- Data will be populated dynamically by JavaScript -->
+                </tbody>
+              </table>
             </div>
           </div>
+
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
-
