--- a/admin/card/index.html
+++ b/admin/card/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card Management</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
+    <!-- Additional Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="../../sessionstorage.js"></script>
     <script src="index.js"></script>
+
+    <!-- Shared Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
   <body>
     <div class="header">
       <div class="container">
         <div class="logout">
-          <a href="/admin/"><img alt="" title="" /> Back &nbsp; | &nbsp;</a>
-          <a id="homelink" href="/admin/"><img alt="" title="" /> Logout</a>
+          <a href="javascript:void(0);" onclick="history.back()">Back</a>
+          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
+          <a id="homelink" href="/admin/">Logout</a>
         </div>
       </div>
     </div>
@@ -34,55 +35,44 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1><br />Card Management</h1>
+              <h1>Card Management</h1>
             </div>
             <div class="form">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="search-section">
-                    <input
-                      type="text"
-                      id="search"
-                      placeholder="Search by name"
-                    />
-                  </div>
-                  <div class="table">
-                    <table
-                      id="data-list"
-                      class="table table-striped table-bordered"
-                    >
-                      <thead>
-                        <tr>
-                          <th>Name</th>
-                          <th>Card Number</th>
-                          <th>Action</th>
-                          <!-- New Action Column -->
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <!-- Rows will be populated by JavaScript -->
-                      </tbody>
-                    </table>
-                  </div>
-                  <!-- Add New Card Button -->
-                  <div class="add-new-card">
-                    <button
-                      onclick="window.location.href='createCard.html'"
-                      class="btn btn-primary"
-                    >
-                      Add New Card
-                    </button>
-                  </div>
-                </div>
+              <div class="form-group">
+                <label for="search">Search by name:</label>
+                <input
+                  type="text"
+                  id="search"
+                  class="form-control"
+                  placeholder="Enter name to search"
+                />
+              </div>
+
+              <div class="table-responsive">
+                <table
+                  id="data-list"
+                  class="table table-striped table-bordered"
+                >
+                  <thead>
+                    <tr>
+                      <th>Name</th>
+                      <th>Card Number</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <!-- Rows populated by JavaScript -->
+                  </tbody>
+                </table>
+              </div>
+
+              <div class="form-group form-submit">
+                <button
+                  onclick="window.location.href='createCard.html'"
+                  class="btn btn-primary"
+                >
+                  Add New Card
+                </button>
               </div>
             </div>
-          </div>
-        </div>
-
-        <div class="detailed-data" id="detailed-data">
-          <!-- Detailed data form will be inserted here by JavaScript -->
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+          </body>
