--- a/admin/food/issuePlate.html
+++ b/admin/food/issuePlate.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kitchen Admin</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
+    <!-- Scripts -->
+    <!-- <script src="../../style/js/config.js"></script>
+    <script src="../../style/js/header.js"></script> -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="issuePlate.js"></script>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
@@ -35,28 +37,25 @@
       <div class="container">
         <div class="whitesec">
           <div class="inner-padding">
+
             <div class="frm-head">
-              <h4>
-                <b><u>Tap your card for food check-in</u></b>
-              </h4>
+              <h1>Tap your card for food check-in</h1>
             </div>
 
             <div class="form">
-              <div id="alert" class="alert" role="alert"></div>
+              <div id="alert" class="alert" role="alert" style="display: none;"></div>
               <form id="foodCheckinForm">
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="cardno" class="col-form-label">Tap your card:</label>
-                  </div>
-                  <div class="col-sm-4">
-                    <input type="text" class="form-control" id="cardno" name="cardno" required />
-                  </div>
-                  <div class="col-sm-3">
-                    <input type="submit" value="Submit" />
-                  </div>
+                <div class="form-group">
+                  <label for="cardno">Tap your card:</label>
+                  <input type="text" class="form-control" id="cardno" name="cardno" required />
+                </div>
+
+                <div class="form-group form-submit">
+                  <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
               </form>
             </div>
+
           </div>
         </div>
       </div>
