--- a/admin/food/issuedPlateReport.html
+++ b/admin/food/issuedPlateReport.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Issued Food Plate Report</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
+    <!-- Scripts -->
+    <!-- <script src="../../style/js/config.js"></script>
+    <script src="../../style/js/header.js"></script> -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
@@ -19,6 +18,9 @@
     <script src="/sessionstorage.js"></script>
     <script src="issuedPlateReport.js"></script>
     <script src="issuePlate.js"></script>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
@@ -36,30 +38,28 @@
       <div class="container">
         <div class="whitesec">
           <div class="inner-padding">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="frm-head">
-                  <h4 id="reportTitle">
-                    <b><u>Issued Food Plate Report</u></b>
-                  </h4>
-                </div>
-                <div id="alert" class="alert" role="alert"></div>
-                <div class="table">
-                  <table class="table table-striped table-bordered">
-                    <thead>
-                      <tr>
-                        <th>Date</th>
-                        <th>Name</th>
-                        <th>Mobile No</th>
-                      </tr>
-                    </thead>
-                    <tbody id="reportTableBody">
-                      <!-- Table rows will be dynamically added here -->
-                    </tbody>
-                  </table>
-                </div>
-              </div>
+
+            <div class="frm-head">
+              <h1>Issued Food Plate Report</h1>
             </div>
+
+            <div id="alert" class="alert" role="alert" style="display: none;"></div>
+
+            <div class="table-responsive">
+              <table class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th>Date</th>
+                    <th>Name</th>
+                    <th>Mobile No</th>
+                  </tr>
+                </thead>
+                <tbody id="reportTableBody">
+                  <!-- Table rows will be dynamically populated -->
+                </tbody>
+              </table>
+            </div>
+
           </div>
         </div>
       </div>
