--- a/admin/food/manageFood.html
+++ b/admin/food/manageFood.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Booking Form</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
+    <!-- Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="manageFood.js"></script>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
@@ -25,8 +26,8 @@
       <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          &nbsp; | &nbsp; <a href="/admin/">Home</a>
+          &nbsp; | &nbsp; <a id="homelink" href="/admin/">Logout</a>
         </div>
       </div>
     </div>
@@ -36,134 +37,85 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h4>
-                <b><u>New Food Booking</u></b>
-              </h4>
+              <h1>New Food Booking</h1>
             </div>
+
             <div class="form">
-              <div id="alert" class="alert" role="alert"></div>
+              <div id="alert" class="alert" role="alert" style="display: none;"></div>
               <form id="foodBookingForm">
+                <div class="form-group">
+                  <label for="mobile">Enter Mobile No:</label>
+                  <input type="tel" id="mobile" name="mobile" class="form-control" />
+                </div>
 
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="mobile" class="col-form-label">Enter Mobile No:</label>
-                  </div>
-                  <div class="col-sm-4">
-                    <input type="tel" class="form-control" id="mobile" name="mobile" />
+                <div class="form-group">
+                  <label for="cardno">Or Card No:</label>
+                  <input type="tel" id="cardno" name="cardno" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                  <label for="start_date">Start Date:</label>
+                  <input type="date" id="start_date" name="start_date" class="form-control" required />
+                </div>
+
+                <div class="form-group">
+                  <label for="end_date">End Date:</label>
+                  <input type="date" id="end_date" name="end_date" class="form-control" required />
+                </div>
+
+                <div class="form-group">
+                  <label>Select Meals:</label>
+                  <div style="display: flex; gap: 20px;">
+                    <label><input type="checkbox" id="breakfast" name="meal" value="breakfast" /> Breakfast</label>
+                    <label><input type="checkbox" id="lunch" name="meal" value="lunch" /> Lunch</label>
+                    <label><input type="checkbox" id="dinner" name="meal" value="dinner" /> Dinner</label>
                   </div>
                 </div>
 
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="cardno" class="col-form-label">Or Card No:</label>
-                  </div>
-                  <div class="col-sm-4">
-                    <input type="tel" class="form-control" id="cardno" name="cardno" />
-                  </div>
+                <div class="form-group">
+                  <label for="spicy">Spice Level:</label>
+                  <select id="spicy" name="spicy" class="form-control" required>
+                    <option value="0" selected>Regular</option>
+                    <option value="1">Spicy</option>
+                  </select>
                 </div>
 
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="start_date" class="col-form-label">Start Date:</label>
-                  </div>  
-                  <div class="col-sm-3">
-                    <input type="date" class="form-control" id="start_date" name="start_date" required />
-                  </div>
-
-                  <div class="col-sm-3">
-                    <label for="end_date" class="col-form-label">End Date:</label>
-                  </div>
-                  <div class="col-sm-3">
-                    <input type="date" class="form-control" id="end_date" name="end_date" required />
-                  </div>
+                <div class="form-group">
+                  <label for="beverage">Tea/Coffee:</label>
+                  <select id="beverage" name="beverage" class="form-control">
+                    <option value="NONE" selected>No, Thank You</option>
+                    <option value="TEA">Tea</option>
+                    <option value="COFFEE">Coffee</option>
+                  </select>
                 </div>
 
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="meals" class="col-form-label">Select Meals:</label>
-                  </div>
-                  <div class="col-sm-3">
-                    <label for="breakfast" class="col-form-label">
-                      <input type="checkbox" id="breakfast" name="meal" value="breakfast" />
-                      Breakfast
-                    </label>
-                  </div>
-                  <div class="col-sm-3">
-                    <label for="lunch" class="col-form-label">
-                      <input type="checkbox" id="lunch" name="meal" value="lunch" />
-                      Lunch
-                    </label>
-                  </div>
-                  <div class="col-sm-3">
-                    <label for="dinner" class="col-form-label">
-                      <input type="checkbox" id="dinner" name="meal" value="dinner" />
-                      Dinner
-                    </label>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="spicy" class="col-form-label">Spice Level:</label>
-                  </div>
-                  <div class="col-sm-3">
-                    <select id="spicy" name="spicy" required>
-                      <option selected="selected" value=0>Regular</option>
-                      <option value=1>Spicy</option>
-                    </select>
-                  </div>
-
-                  <div class="col-sm-3">
-                    <label for="beverage" class="col-form-label">Tea/Coffee:</label>
-                  </div>
-                  <div class="col-sm-3">
-                    <select id="beverage" name="beverage">
-                      <option selected="selected" value="NONE">No, Thank You</option>
-                      <option value="TEA">Tea</option>
-                      <option value="COFFEE">Coffee</option>
-                    </select>
-                  </div> 
-                </div>
-
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="submit" class="col-form-label"></label>
-                  </div>
-                  <div class="col-sm-3">
-                    <input type="submit" value="Submit" />
-                  </div>
-                  <div class="col-sm-4">
-                    <label for="submit" class="col-form-label">
-                      <a onclick='getExistingBookings();' href='#'>Get Existing Bookings</a>
-                    </label>
-                  </div>
+                <div class="form-group form-submit">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                  &nbsp;
+                  <a href="#" onclick="getExistingBookings();" class="btn btn-secondary">Get Existing Bookings</a>
                 </div>
               </form>
             </div>
 
-            <div class="row">
-              <div class="col-md-12">
-                <div class="frm-head">
-                  <h4>
-                    <b><u>Manage Existing Bookings</u></b>
-                  </h4>
-                </div>
-                <div class="table">
-                  <table id="bookingsTable" class="table table-striped table-bordered">
-                    <thead>
-                      <tr>
-                        <th>Date</th>
-                        <th>Meal</th> 
-                        <th>Action</th>
-                      </tr>
-                    </thead>
-                    <tbody id="bookingsTableBody">
-                      <!-- Table rows will be dynamically added here -->
-                    </tbody>
-                  </table>
-                </div>
-              </div>
+            <div class="frm-head">
+              <h1>Manage Existing Bookings</h1>
             </div>
+
+            <div class="table-responsive">
+              <table id="bookingsTable" class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th>Date</th>
+                    <th>Meal</th>
+                    <th>Action</th>
+                  </tr>
+                </thead>
+                <tbody id="bookingsTableBody">
+                  <!-- Table rows will be dynamically added here -->
+                </tbody>
+              </table>
+            </div>
+
           </div>
         </div>
       </div>
