--- a/admin/report/foodReport.html
+++ b/admin/report/foodReport.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Kitchen Admin</title>
+    <meta charset="UTF-8" />
+    <title>Kitchen Admin - Food Report</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Load jQuery first -->
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
+    <!-- JS Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
+
   <body>
     <div class="header">
       <div class="container">
@@ -32,150 +33,118 @@
     <div class="middlecontent">
       <div class="container">
         <div class="whitesec">
-          <div class="frm-head">
-            <h2>
-              Food Report from:
-              <?php echo date('d/m/Y', strtotime($checkin1)); ?>
-              -
-              <?php echo date('d/m/Y', strtotime($checkin2)); ?>
-            </h2>
-          </div>
-
-          <div class="form">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="table">
-                  <!-- Breakfast Table -->
-                  <table class="table table-striped table-bordered text-center">
-                    <tr>
-                      <th></th>
-                      <th colspan="4">Breakfast</th>
-                    </tr>
-                    <tr>
-                      <th>Date</th>
-                      <th>Regd</th>
-                      <th>Issued</th>
-                      <th>No Show</th>
-                      <th>Physical Count</th>
-                    </tr>
-                    <?php if (mysqli_num_rows($result) >
-                    0): ?>
-                    <?php while ($row = mysqli_fetch_assoc($result)): ?>
-                    <tr>
-                      <td>
-                        <?php echo date('d/m/Y', strtotime($row['fordate'])); ?>
-                      </td>
-                      <td><?php echo $row['total']; ?></td>
-                      <td>
-                        <a
-                          href="foodshow.php?mealtype=breakfast&fordate=<?php echo $row['fordate']; ?>"
-                          ><?php echo $row['plates']; ?></a
-                        >
-                      </td>
-                      <td>
-                        <a
-                          href="foodnoshow.php?mealtype=breakfast&fordate=<?php echo $row['fordate']; ?>"
-                          ><?php echo $row['platesno']; ?></a
-                        >
-                      </td>
-                      <td><?php echo $row['physical_count']; ?></td>
-                    </tr>
-                    <?php endwhile; ?>
-                    <?php endif; ?>
-                    <tr>
-                      <td><b>TOTAL</b></td>
-                      <td>
-                        <b><?php echo $row1['meal_total']; ?></b>
-                      </td>
-                      <td>
-                        <b><?php echo $row2['total_plate_issued']; ?></b>
-                      </td>
-                      <td>
-                        <b
-                          ><?php echo $row1['meal_total'] - $row2['total_plate_issued']; ?></b
-                        >
-                      </td>
-                      <td>
-                        <b
-                          ><?php echo $row22['total_physical_plate_count']; ?></b
-                        >
-                      </td>
-                    </tr>
-                  </table>
-
-                  <!-- Lunch Table -->
-                  <table class="table table-striped table-bordered text-center">
-                    <tr>
-                      <th></th>
-                      <th colspan="4">Lunch</th>
-                    </tr>
-                    <tr>
-                      <th>Date</th>
-                      <th>Regd</th>
-                      <th>Issued</th>
-                      <th>No Show</th>
-                      <th>Physical Count</th>
-                    </tr>
-                    <?php if (mysqli_num_rows($result3) >
-                    0): ?>
-                    <?php while ($row3 = mysqli_fetch_assoc($result3)): ?>
-                    <tr>
-                      <td>
-                        <?php echo date('d/m/Y', strtotime($row3['fordate'])); ?>
-                      </td>
-                      <td><?php echo $row3['total']; ?></td>
-                      <td>
-                        <a
-                          href="foodshow.php?mealtype=lunch&fordate=<?php echo $row3['fordate']; ?>"
-                          ><?php echo $row3['plates']; ?></a
-                        >
-                      </td>
-                      <td>
-                        <a
-                          href="foodnoshow.php?mealtype=lunch&fordate=<?php echo $row3['fordate']; ?>"
-                          ><?php echo $row3['platesno']; ?></a
-                        >
-                      </td>
-                      <td><?php echo $row3['physical_count']; ?></td>
-                    </tr>
-                    <?php endwhile; ?>
-                    <?php endif; ?>
-                    <tr>
-                      <td><b>TOTAL</b></td>
-                      <td>
-                        <b><?php echo $row4['meal_total']; ?></b>
-                      </td>
-                      <td>
-                        <b><?php echo $row5['total_plate_issued']; ?></b>
-                      </td>
-                      <td>
-                        <b
-                          ><?php echo $row4['meal_total'] - $row5['total_plate_issued']; ?></b
-                        >
-                      </td>
-                      <td>
-                        <b
-                          ><?php echo $row32['total_physical_plate_count']; ?></b
-                        >
-                      </td>
-                    </tr>
-                  </table>
-
-                  <!-- Export Button -->
-                  <div class="text-center mt-4">
-                    <a
-                      href="generate_food_data.php?export=true&checkin1=2020-02-24&checkin2=2020-02-24"
-                      class="btn btn-success"
-                    >
-                      Export to Excel
-                    </a>
-                  </div>
-                </div>
-              </div>
+          <div class="inner-padding">
+            <div class="frm-head">
+              <h1>
+                Food Report:
+                <?php echo date('d/m/Y', strtotime($checkin1)); ?> -
+                <?php echo date('d/m/Y', strtotime($checkin2)); ?>
+              </h1>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
+            <div class="form">
+              <!-- === Breakfast Table === -->
+              <h3 class="text-center">Breakfast</h3>
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered text-center">
+                  <thead>
+                    <tr>
+                      <th>Date</th>
+                      <th>Regd</th>
+                      <th>Issued</th>
+                      <th>No Show</th>
+                      <th>Physical Count</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <?php if (mysqli_num_rows($result) > 0): ?>
+                      <?php while ($row = mysqli_fetch_assoc($result)): ?>
+                        <tr>
+                          <td><?php echo date('d/m/Y', strtotime($row['fordate'])); ?></td>
+                          <td><?php echo $row['total']; ?></td>
+                          <td>
+                            <a href="foodshow.php?mealtype=breakfast&fordate=<?php echo $row['fordate']; ?>">
+                              <?php echo $row['plates']; ?>
+                            </a>
+                          </td>
+                          <td>
+                            <a href="foodnoshow.php?mealtype=breakfast&fordate=<?php echo $row['fordate']; ?>">
+                              <?php echo $row['platesno']; ?>
+                            </a>
+                          </td>
+                          <td><?php echo $row['physical_count']; ?></td>
+                        </tr>
+                      <?php endwhile; ?>
+                    <?php endif; ?>
+                    <tr>
+                      <th>Total</th>
+                      <th><?php echo $row1['meal_total']; ?></th>
+                      <th><?php echo $row2['total_plate_issued']; ?></th>
+                      <th><?php echo $row1['meal_total'] - $row2['total_plate_issued']; ?></th>
+                      <th><?php echo $row22['total_physical_plate_count']; ?></th>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
+              <!-- === Lunch Table === -->
+              <h3 class="text-center mt-5">Lunch</h3>
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered text-center">
+                  <thead>
+                    <tr>
+                      <th>Date</th>
+                      <th>Regd</th>
+                      <th>Issued</th>
+                      <th>No Show</th>
+                      <th>Physical Count</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <?php if (mysqli_num_rows($result3) > 0): ?>
+                      <?php while ($row3 = mysqli_fetch_assoc($result3)): ?>
+                        <tr>
+                          <td><?php echo date('d/m/Y', strtotime($row3['fordate'])); ?></td>
+                          <td><?php echo $row3['total']; ?></td>
+                          <td>
+                            <a href="foodshow.php?mealtype=lunch&fordate=<?php echo $row3['fordate']; ?>">
+                              <?php echo $row3['plates']; ?>
+                            </a>
+                          </td>
+                          <td>
+                            <a href="foodnoshow.php?mealtype=lunch&fordate=<?php echo $row3['fordate']; ?>">
+                              <?php echo $row3['platesno']; ?>
+                            </a>
+                          </td>
+                          <td><?php echo $row3['physical_count']; ?></td>
+                        </tr>
+                      <?php endwhile; ?>
+                    <?php endif; ?>
+                    <tr>
+                      <th>Total</th>
+                      <th><?php echo $row4['meal_total']; ?></th>
+                      <th><?php echo $row5['total_plate_issued']; ?></th>
+                      <th><?php echo $row4['meal_total'] - $row5['total_plate_issued']; ?></th>
+                      <th><?php echo $row32['total_physical_plate_count']; ?></th>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
+              <!-- === Export Button === -->
+              <div class="text-center mt-4">
+                <a
+                  href="generate_food_data.php?export=true&checkin1=<?php echo $checkin1; ?>&checkin2=<?php echo $checkin2; ?>"
+                  class="btn btn-success"
+                >
+                  Export to Excel
+                </a>
+              </div>
+
+            </div> <!-- .form -->
+          </div> <!-- .inner-padding -->
+        </div> <!-- .whitesec -->
+      </div> <!-- .container -->
+    </div> <!-- .middlecontent -->
   </body>
 </html>
