--- a/admin/report/index.html
+++ b/admin/report/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Vitraag Vigyaan</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vitraag Vigyaan - Custom Reports</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
+    <!-- Additional Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
-    <script src="/sessionstorage.js"></script>
+    <script src="../../sessionstorage.js"></script>
+
+    <!-- Shared Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
   <body>
     <div class="header">
@@ -34,63 +34,79 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h3>Custom Reports</h3>
+              <h1>Custom Reports</h1>
             </div>
             <div class="form">
-              <div class="row">
-                <form action="index.js" method="post">
-                  <div class="col-md-12">
-                    <label>Report Type:</label>
-                    <select name="reportType">
-                      <option value="foodReport.html">Food Report</option>
-                      <option value="roomBookingReport.html">
-                        Room Reservation Report
-                      </option>
-                      <option value="waitlistReport.html">
-                        Waitlist Report
-                      </option>
-                      <option value="roomStatusAdmin.html">
-                        Daily Guest Count Report
-                      </option>
-                      <option value="roomStatus.html">
-                        Room Availability Report
-                      </option>
-                      <option value="deposit_refund.php">
-                        Deposit-Refund Report
-                      </option>
-                    </select>
-                  </div>
-                  <div class="col-md-12">
-                    <label>Report Start Date:</label>
-                    <input
-                      type="date"
-                      name="checkin1"
-                      value="<?php"
-                      echo
-                      $Echo;
-                      ?
-                    />
-                  </div>
-                  <div class="col-md-12">
-                    <label>Report End Date:</label>
-                    <input
-                      type="date"
-                      name="checkin2"
-                      value="<?php"
-                      echo
-                      $Echo1;
-                      ?
-                    />
-                  </div>
-                  <div class="col-md-12">
-                    <input type="submit" value="submit" />
-                  </div>
-                </form>
-              </div>
+              <form id="customReportForm" action="#" method="post">
+                <div class="form-group">
+                  <label for="reportType">Report Type:</label>
+                  <select
+                    id="reportType"
+                    name="reportType"
+                    class="form-control"
+                    required
+                  >
+                    <option value="foodReport.html">Food Report</option>
+                    <option value="roomBookingReport.html">Room Reservation Report</option>
+                    <option value="waitlistReport.html">Waitlist Report</option>
+                    <option value="roomStatusAdmin.html">Daily Guest Count Report</option>
+                    <option value="roomStatus.html">Room Availability Report</option>
+                    <option value="deposit_refund.php">Deposit-Refund Report</option>
+                  </select>
+                </div>
+
+                <div class="form-group">
+                  <label for="startDate">Report Start Date:</label>
+                  <input
+                    type="date"
+                    id="startDate"
+                    name="checkin1"
+                    class="form-control"
+                    required
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="endDate">Report End Date:</label>
+                  <input
+                    type="date"
+                    id="endDate"
+                    name="checkin2"
+                    class="form-control"
+                    required
+                  />
+                </div>
+
+                <div class="form-group form-submit">
+                  <button type="submit" class="btn btn-primary">
+                    Submit
+                  </button>
+                </div>
+              </form>
+
+              <!-- Optional: You can add result handling/message here -->
+              <p id="reportMessage"></p>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <script>
+      // Optional JS: Redirect to selected report with parameters
+      $('#customReportForm').on('submit', function (e) {
+        e.preventDefault();
+        const reportType = $('#reportType').val();
+        const startDate = $('#startDate').val();
+        const endDate = $('#endDate').val();
+
+        if (reportType && startDate && endDate) {
+          const url = `${reportType}?start=${startDate}&end=${endDate}`;
+          window.location.href = url;
+        } else {
+          $('#reportMessage').text('Please select all fields.').css('color', 'red');
+        }
+      });
+    </script>
   </body>
 </html>
