--- a/admin/room/dailyGuestCountReport.html
+++ b/admin/room/dailyGuestCountReport.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daily Guest Count / Availability Report</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
+    <!-- Scripts -->
     <script src="https://use.fontawesome.com/373a347df2.js"></script>
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
@@ -18,6 +16,9 @@
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="dailyGuestCountReport.js"></script>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
@@ -25,82 +26,62 @@
       <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          &nbsp; | &nbsp; <a href="/admin/">Home</a>
+          &nbsp; | &nbsp; <a id="homelink" href="/admin/">Logout</a>
         </div>
       </div>
     </div>
 
     <div class="middlecontent">
-      <div class="container-fluid">
+      <div class="container">
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h4>
-                <b><u>Daily Guest Count / Availability Report</u></b>
-              </h4>
+              <h1>Daily Guest Count / Availability Report</h1>
             </div>
-            <div class="form" id="reportForm">
-              <div id="alert" class="alert" role="alert"></div>
-              <form>
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="start_date" class="col-form-label">Start Date:</label>
-                  </div>
-                  <div class="col-sm-4">
-                    <input type="date" class="form-control" id="start_date" name="start_date" required />
-                  </div>
+
+            <div class="form">
+              <div id="alert" class="alert" role="alert" style="display: none;"></div>
+              <form id="reportForm">
+                <div class="form-group">
+                  <label for="start_date">Start Date:</label>
+                  <input type="date" class="form-control" id="start_date" name="start_date" required />
                 </div>
-                
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="end_date" class="col-form-label">End Date:</label>
-                  </div>
-                  <div class="col-sm-4">
-                    <input type="date" class="form-control" id="end_date" name="end_date" required />
-                  </div>
+
+                <div class="form-group">
+                  <label for="end_date">End Date:</label>
+                  <input type="date" class="form-control" id="end_date" name="end_date" required />
                 </div>
-                  
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="submit" class="col-form-label"></label>
-                  </div>
-                  <div class="col-sm-3">
-                    <input type="submit" value="Submit" />
-                  </div>
+
+                <div class="form-group form-submit">
+                  <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
               </form>
             </div>
 
-            <div>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="frm-head">
-                  </div>
-                  <div class="table">
-                    <table
-                      id="reportTable"
-                      class="table table-striped table-bordered"
-                    >
-                      <thead>
-                        <tr>
-                          <th><center>Date</center></th>
-                          <th><center>Guests in A.C.</center></th>
-                          <th><center>Guests in Non A.C.</center></th>
-                          <th><center>Total Guests in RC</center></th>
-                          <th><center>A.C. Beds Available</center></th>
-                          <th><center>Non A.C. Beds Available</center></th>
-                          <th><center>Total Beds Available</center></th>
-                        </tr>
-                      </thead>
-                      <tbody id="reportTableBody">
-                        <!-- Table rows will be dynamically added here -->
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
+            <div class="frm-head mt-4">
+              <h2>Report</h2>
             </div>
+
+            <div class="table-responsive">
+              <table id="reportTable" class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th>Date</th>
+                    <th>Guests in A.C.</th>
+                    <th>Guests in Non A.C.</th>
+                    <th>Total Guests in RC</th>
+                    <th>A.C. Beds Available</th>
+                    <th>Non A.C. Beds Available</th>
+                    <th>Total Beds Available</th>
+                  </tr>
+                </thead>
+                <tbody id="reportTableBody">
+                  <!-- Table rows will be dynamically added here -->
+                </tbody>
+              </table>
+            </div>
+
           </div>
         </div>
       </div>
