--- a/admin/room/fetchFlatBookingsByCard.html
+++ b/admin/room/fetchFlatBookingsByCard.html
@@ -3,88 +3,95 @@
   <head>
     <title>Flat Bookings by Card Number</title>
 
-    <!-- Load jQuery first -->
+    <!-- Meta -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Load jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
+    <!-- Scripts -->
+    <!-- <script src="../../style/js/config.js"></script>
     <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
-    <script src="../../style/js/plugin.js"></script>
+    <script src="../../style/js/plugin.js"></script> -->
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="fetchFlatBookingsByCard.js"></script>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
+    <!-- Header -->
     <div class="header">
       <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          &nbsp; | &nbsp; <a href="/admin/">Home</a>
+          &nbsp; | &nbsp; <a id="homelink" href="/admin/">Logout</a>
         </div>
       </div>
     </div>
 
+    <!-- Main Content -->
     <div class="middlecontent">
       <div class="container">
         <div class="whitesec">
           <div class="inner-padding">
+            <!-- Heading -->
             <div class="frm-head">
-              <h4>
-                <b><u>Flat Bookings by Card Number</u></b>
-              </h4>
+              <h4>Flat Bookings by Card Number</h4>
             </div>
+
+            <!-- Form -->
             <div class="form">
               <div id="alert" class="alert" role="alert"></div>
               <form id="bookingForm">
-                <div class="row">
-
+                <div class="row mb-3">
                   <div class="col-sm-2">
                     <label for="cardno" class="col-form-label">Card No:</label>
                   </div>
                   <div class="col-sm-5">
-                    <input type="text" class="form-control" id="cardno" name="cardno" required />
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="cardno"
+                      name="cardno"
+                      required
+                    />
                   </div>
                   <div class="col-sm-3">
-                    <input type="submit" value="Submit" />
+                    <input type="submit" class="btn btn-primary" value="Submit" />
                   </div>
                 </div>
               </form>
             </div>
-            <div>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="frm-head">
-                    <h4>
-                      <b>Bookings</b>
-                    </h4>
-                  </div>
-                  <div class="table">
-                    <table id="bookingsTable" class="table table-striped table-bordered">
-                      <thead>
-                        <tr>
-                          <th>Booking ID</th>
-                          <th>Flat Number</th>
-                          <th>Check-in Date</th>
-                          <th>Check-out Date</th>
-                          <th>Nights</th>
-                          <th>Status</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <!-- Flat booking data will be dynamically inserted here -->
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
+
+            <!-- Table -->
+            <div class="frm-head">
+              <h4>Bookings</h4>
             </div>
+            <div class="table-responsive">
+              <table id="bookingsTable" class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th>Booking ID</th>
+                    <th>Flat Number</th>
+                    <th>Check-in Date</th>
+                    <th>Check-out Date</th>
+                    <th>Nights</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Flat booking data will be dynamically inserted here -->
+                </tbody>
+              </table>
+            </div>
+
           </div>
         </div>
       </div>
