--- a/admin/room/manageRooms.html
+++ b/admin/room/manageRooms.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manage Rooms</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
+    <!-- Scripts -->
+    <!-- <script src="../../style/js/config.js"></script>
     <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
-    <script src="../../style/js/plugin.js"></script>
+    <script src="../../style/js/plugin.js"></script> -->
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="manageRooms.js"></script>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
@@ -25,8 +27,8 @@
       <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          &nbsp; | &nbsp; <a href="/admin/">Home</a>
+          &nbsp; | &nbsp; <a id="homelink" href="/admin/">Logout</a>
         </div>
       </div>
     </div>
@@ -35,40 +37,40 @@
       <div class="container">
         <div class="whitesec">
           <div class="inner-padding">
+
             <div class="frm-head">
-              <h4>
-                <b><u>Manage Rooms</u></b>
-              </h4>
+              <h1>Manage Rooms</h1>
             </div>
 
             <div class="form">
-              <div id="alert" class="alert" role="alert"></div>
+              <div id="alert" class="alert" role="alert" style="display: none;"></div>
 
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="table">
-                    <table
-                      id="reportTable"
-                      class="table table-striped table-bordered"
-                    >
-                      <thead>
-                        <tr>
-                          <th>&nbsp;</th>
-                          <th>Room No</th>
-                          <th>Room Type</th>
-                          <th>Gender</th>
-                          <th>Status</th>
-                          <th>Action</th>
-                        </tr>
-                      </thead>
-                      <tbody id="reportTableBody">
-                        <!-- Table rows will be dynamically added here -->
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
+              <div class="table-responsive">
+                <table id="reportTable" class="table table-striped table-bordered">
+                  <thead>
+                    <tr>
+                      <th>&nbsp;</th>
+                      <th>Room No</th>
+                      <th>Room Type</th>
+                      <th>Gender</th>
+                      <th>Status</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody id="reportTableBody">
+                    <!-- Table rows will be dynamically added here -->
+                  </tbody>
+                </table>
               </div>
+
+              <div class="form-group form-submit mt-3">
+                <button onclick="window.location.href='addRoom.html'" class="btn btn-secondary">
+                  Add New Room
+                </button>
+              </div>
+
             </div>
+
           </div>
         </div>
       </div>
