--- a/admin/room/occupancyReport.html
+++ b/admin/room/occupancyReport.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Occupancy Report</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
+    <!-- Scripts -->
+    <!-- <script src="../../style/js/config.js"></script>
     <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
-    <script src="../../style/js/plugin.js"></script>
+    <script src="../../style/js/plugin.js"></script> -->
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="occupancyReport.js"></script>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
@@ -25,48 +27,43 @@
       <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          &nbsp; | &nbsp; <a href="/admin/">Home</a>
+          &nbsp; | &nbsp; <a id="homelink" href="/admin/">Logout</a>
         </div>
       </div>
     </div>
 
     <div class="middlecontent">
-      <div class="container-fluid">
+      <div class="container">
         <div class="whitesec">
           <div class="inner-padding">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="frm-head">
-                  <h4>
-                    <b><u>Occupancy Report</u></b>
-                  </h4>
-                </div>
-                <div class="table">
-                  <table
-                    id="occupancyTable"
-                    class="table table-striped table-bordered">
-                    <thead>
-                      <tr>
-                        <th>Booking ID</th>
-                        <th>Guest Name</th> 
-                        <th>Mobile No.</th>
-                        <th>Center</th>
-                        <th>Room No</th>
-                        <th>Room Type</th>
-                        <th>Check-in</th>
-                        <th>Check-out</th>
-                        <th>Nights</th>
-                        <th>Booked By</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <!-- Occupancy report data will be dynamically inserted here -->
-                    </tbody>
-                  </table>
-                </div>
-              </div>
+
+            <div class="frm-head">
+              <h1>Occupancy Report</h1>
             </div>
+
+            <div class="table-responsive">
+              <table id="occupancyTable" class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th>Booking ID</th>
+                    <th>Guest Name</th> 
+                    <th>Mobile No.</th>
+                    <th>Center</th>
+                    <th>Room No</th>
+                    <th>Room Type</th>
+                    <th>Check-in</th>
+                    <th>Check-out</th>
+                    <th>Nights</th>
+                    <th>Booked By</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Occupancy report data will be dynamically inserted here -->
+                </tbody>
+              </table>
+            </div>
+
           </div>
         </div>
       </div>
