--- a/admin/room/roomReports.html
+++ b/admin/room/roomReports.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Room Booking Reports</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
+    <!-- Config and Scripts -->
+    <!-- <script src="../../style/js/config.js"></script>
     <script src="../../style/js/header.js"></script>
-
-    <script>
-      const REPORT_URL = `${CONFIG.basePath}/stay/reservation_report`;
-    </script>
-
-    <!-- Additional Styles and Scripts -->
-
-    <script src="../../style/js/plugin.js"></script>
+    <script src="../../style/js/plugin.js"></script> -->
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="roomReports.js"></script>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
+
+    <script>
+      const REPORT_URL = `${CONFIG.basePath}/stay/reservation_report`;
+    </script>
   </head>
 
   <body>
@@ -29,145 +31,85 @@
       <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
-          <a id="homelink" href="/admin/">Logout</a>
+          &nbsp; | &nbsp; <a href="/admin/">Home</a>
+          &nbsp; | &nbsp; <a id="homelink" href="/admin/">Logout</a>
         </div>
       </div>
     </div>
 
     <div class="middlecontent">
-      <div class="container-fluid">
+      <div class="container">
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h4>
-                <b><u>Room Booking Reports</u></b>
-              </h4>
+              <h1>Room Booking Reports</h1>
             </div>
+
             <div class="form">
-              <div id="alert" class="alert" role="alert"></div>
+              <div id="alert" class="alert" role="alert" style="display:none;"></div>
               <form id="reportForm">
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <label for="report_type" class="col-form-label">Report Type:</label>
-                    </div>
-                    <div class="col-sm-4">
-                      <select id="report_type" name="report_type" required>
-                        <option value="reservation_report" data-type="room">Room Reservation Report</option>
-                        <option value="flat_reservation_report" data-type="flat">Flat Reservation Report</option>
-                      </select>
-                    </div>
-                  </div>
+                <div class="form-group">
+                  <label for="report_type">Report Type:</label>
+                  <select id="report_type" name="report_type" class="form-control" required>
+                    <option value="reservation_report" data-type="room">Room Reservation Report</option>
+                    <option value="flat_reservation_report" data-type="flat">Flat Reservation Report</option>
+                  </select>
+                </div>
 
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <label for="status" class="col-form-label">Status:</label>
-                    </div>
-                    <div class="col-sm-3">
-                      <label for="checkedin" class="col-form-label">
-                        <input type="checkbox" id="checkedin" name="status" value="checkedin" checked/>
-                        Checked-in
-                      </label>
-                    </div>
-                    <div class="col-sm-3">
-                      <label for="checkedout" class="col-form-label">
-                        <input type="checkbox" id="checkedout" name="status" value="checkedout" />
-                        Checked-out
-                      </label>
-                    </div>
-                    <div class="col-sm-3">
-                      <label for="pending checkin" class="col-form-label">
-                        <input type="checkbox" id="pending checkin" name="status" value="pending checkin" />
-                        Pending Check-in
-                      </label>
-                    </div>
+                <div class="form-group">
+                  <label>Status:</label>
+                  <div class="checkbox-group" style="display: flex; flex-wrap: wrap; gap: 1rem;">
+                    <label><input type="checkbox" name="status" value="checkedin" checked /> Checked-in</label>
+                    <label><input type="checkbox" name="status" value="checkedout" /> Checked-out</label>
+                    <label><input type="checkbox" name="status" value="pending checkin" /> Pending Check-in</label>
+                    <label><input type="checkbox" name="status" value="waiting" /> Waiting</label>
+                    <label><input type="checkbox" name="status" value="cancelled" /> Cancelled By User</label>
+                    <label><input type="checkbox" name="status" value="admin cancelled" /> Cancelled By Admin</label>
                   </div>
+                </div>
+                
 
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <label for="status" class="col-form-label"></label>
-                    </div>
-                    <div class="col-sm-3">
-                      <label for="waiting" class="col-form-label">
-                        <input type="checkbox" id="waiting" name="status" value="waiting" />
-                        Waiting
-                      </label>
-                    </div>
-                    <div class="col-sm-3">
-                      <label for="cancelled" class="col-form-label">
-                        <input type="checkbox" id="cancelled" name="status" value="cancelled" />
-                        Cancelled By User
-                      </label>
-                    </div>
-                    <div class="col-sm-3">
-                      <label for="admin cancelled" class="col-form-label">
-                        <input type="checkbox" id="admin cancelled" name="status" value="admin cancelled" />
-                        Cancelled By Admin
-                      </label>
-                    </div>
-                  </div>
+                <div class="form-group">
+                  <label for="start_date">Start Date:</label>
+                  <input type="date" id="start_date" name="start_date" class="form-control" required />
+                </div>
 
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <label for="start_date" class="col-form-label">Start Date:</label>
-                    </div>
-                    <div class="col-sm-3">
-                      <input type="date" class="form-control" id="start_date" name="start_date" required />
-                    </div>
+                <div class="form-group">
+                  <label for="end_date">End Date:</label>
+                  <input type="date" id="end_date" name="end_date" class="form-control" required />
+                </div>
 
-                    <div class="col-sm-2">
-                      <label for="end_date" class="col-form-label">End Date:</label>
-                    </div>
-                    <div class="col-sm-3">
-                      <input type="date" class="form-control" id="end_date" name="end_date" required />
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <label for="submit" class="col-form-label"></label>
-                    </div>
-                    <div class="col-sm-2">
-                      <input type="submit" value="Submit" />
-                    </div>
-                  </div>
+                <div class="form-group form-submit">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
               </form>
+            </div>
 
+            <div class="table-responsive">
+              <table id="reportTable" class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th>Guest Name</th>
+                    <th>Mobile No.</th>
+                    <th>Center</th>
+                    <th>Room No</th>
+                    <th>Room Type</th>
+                    <th>Check-in</th>
+                    <th>Check-out</th>
+                    <th>Nights</th>
+                    <th>Status</th>
+                    <th>Booked By</th>
+                    <th>Action</th>
+                    <th>Cancel</th>
+                  </tr>
+                </thead>
+                <tbody id="reportTableBody">
+                  <!-- Table rows will be dynamically added here -->
+                </tbody>
+              </table>
             </div>
-        
-            <div class="row">
-              <div class="col-md-12">
-                <div class="frm-head">
-                </div>
-                <div class="table">
-                  <table
-                    id="reportTable"
-                    class="table table-striped table-bordered"
-                  >
-                    <thead>
-                      <tr>
-                        <th></th>
-                        <th>Guest Name</th> 
-                        <th>Mobile No.</th>
-                        <th>Center</th>
-                        <th>Room No</th>
-                        <th>Room Type</th>
-                        <th>Check-in</th>
-                        <th>Check-out</th>
-                        <th>Nights</th>
-                        <th>Status</th>
-                        <th>Booked By</th>
-                        <th>Action</th>
-                        <th>Cancel</th>
-                      </tr>
-                    </thead>
-                    <tbody id="reportTableBody">
-                      <!-- Table rows will be dynamically added here -->
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
+
           </div>
         </div>
       </div>
