--- a/admin/room/updateRoomBooking.html
+++ b/admin/room/updateRoomBooking.html
@@ -7,17 +7,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
+    <!-- <script src="../../style/js/config.js"></script>
+    <script src="../../style/js/header.js"></script> -->
 
-    <!-- Additional Styles and Scripts -->
-
+    <!-- Additional Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="updateRoomBooking.js"></script>
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
@@ -36,47 +38,36 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h4>
-                <b><u>Update Room Booking</u></b>
-              </h4>
+              <h1>Update Room Booking</h1>
             </div>
+
             <div class="form">
+              <div id="alert" class="alert" role="alert" style="display:none;"></div>
               <form id="updateBookingForm">
-                <div id="alert" class="alert" role="alert"></div>
-                <div class="row">
-                  <div class="col-sm-3">
-                    <label for="bookingId">Booking ID:</label>
-                  </div>
-                  <div class="col-sm-5">
-                    <input
-                      type="text"
-                      id="bookingId"
-                      name="bookingId"
-                      required
-                    />
-                  </div>
+                
+                <div class="form-group">
+                  <label for="bookingId">Booking ID:</label>
+                  <input
+                    type="text"
+                    id="bookingId"
+                    name="bookingId"
+                    class="form-control"
+                    required
+                  />
                 </div>
 
-                <div class="row">
-                  <div class="col-sm-3"> 
-                    <label for="roomNumber">New Room No:</label>
-                  </div>
-                  <div class="col-sm-3">
-                    <select id="roomNumber" name="roomNumber" required></select>
-                  </div>
+                <div class="form-group">
+                  <label for="roomNumber">New Room No:</label>
+                  <select id="roomNumber" name="roomNumber" class="form-control" required></select>
                 </div>
 
-                <div class="row">
-                  <div class="col-sm-3"> 
-                    <label for="submit"></label>
-                  </div>
-
-                  <div class="col-sm-3">
-                    <input type="submit" value="Submit"/>
-                  </div>
+                <div class="form-group form-submit">
+                  <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
+                
               </form>
             </div>
+
           </div>
         </div>
       </div>
