--- a/admin/sudo/deactivateAdmin.html
+++ b/admin/sudo/deactivateAdmin.html
@@ -1,86 +1,70 @@
-<!--index--> 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="logo.png">
-<title>Deactivate Admin</title>
-<!-- Bootstrap core CSS -->
-<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
-<link href="../style/css/plugin.css" rel="stylesheet">
-<!-- Custom styles for this template -->
-<link href="../style/css/clockpicker.css" rel="stylesheet">
-<link href="../style/css/style.css" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Deactivate Admin</title>
 
-<body>
-<div class="fullheight" style="background:url(../style/images/RC_Blur.png) no-repeat center center; background-size: cover;">
+    <!-- Load jQuery first -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+    <!-- Additional Scripts -->
+    <script src="../../style/js/plugin.js"></script>
+    <script src="../../style/js/bootstrap-datepicker.min.js"></script>
+    <script src="../../style/js/clockpicker.js"></script>
+    <script src="../../style/js/custom.js"></script>
+    <script src="../../sessionstorage.js"></script>
+    <script src="deactivateAdmin.js"></script>
+
+    <!-- Shared Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
+  </head>
+
+  <body>
     <div class="header">
-        <div class="container">
-          <div class="logout">
-            <a id="homelink" href="../index.html">
-              <img alt="" title="" /> Logout
-            </a>
-          </div>
-          <div class="logout">
-            <a href="/adminhome.html">
-              <img alt="" title="" /> Home &nbsp; | &nbsp;
-            </a>
-          </div>
-          <div class="logout">
-            <a href="/0_adminManagement/adminManagement.html">
-              <img alt="" title="" /> Back &nbsp; | &nbsp;
-            </a>
+      <div class="container">
+        <div class="logout">
+          <a href="javascript:void(0);" onclick="history.back()">Back</a>
+          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
+          <a id="homelink" href="/admin/">Logout</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="middlecontent">
+      <div class="container">
+        <div class="whitesec">
+          <div class="inner-padding">
+            <div class="frm-head">
+              <h1>Deactivate Admin</h1>
+            </div>
+
+            <div class="form">
+              <form id="deactivateAdminForm">
+                <div class="form-group">
+                  <label for="username">Username:</label>
+                  <input
+                    type="text"
+                    id="username"
+                    name="username"
+                    class="form-control"
+                    placeholder="Enter username"
+                    required
+                  />
+                </div>
+
+                <div class="form-group form-submit">
+                  <button type="submit" class="btn btn-danger">
+                    Deactivate Admin
+                  </button>
+                </div>
+
+                <div id="statusMessage"></div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
-        <div class="middlecontent">
-        	<div class="container">
-            	<div class="whitesec">
-                    <div class="inner-padding">
-                    	<div class="frm-head">
-                          <h4><b><u>Deactivate Admin </u></b></h4>
-							   </div>
-								<div class="form">
-									<div class="row">
-									<div class="col-md-12">
-										<form id="deactivateAdminForm">
-                                            <label for="username">Username:</label>
-                                            <input type="text" id="username" name="username" required />
-                                            <button type="submit">Deactivate Admin</button>
-                                          </form>
-                                          <p id="statusMessage"></p>                                      
-									</div>	
-                                </form>
-							</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer">
-        	<div class="container">
-            	<p>© 2022 <a href="#" target="_blank">Shrimad Rajchandra Aatma Tatva Research Centre</a></p>
-            </div>
-        </div>
     </div>
-</div>
-<!-- Bootstrap core JavaScript
-    ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
- 
-<script src="../style/js/plugin.js"></script>
-<script src="../style/js/bootstrap-datepicker.min.js"></script>
-<script src="../style/js/clockpicker.js"></script>
-<script src="../style/js/custom.js"></script>
-<script src="/sessionstorage.js"></script>
-<script src="deactivateAdmin.js"></script>
-</body>
+  </body>
 </html>
