--- a/admin/sudo/index.html
+++ b/admin/sudo/index.html
@@ -1,64 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sudo User Management</title>
 
-    <!-- Load jQuery first -->
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
+    <!-- Additional Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="../../sessionstorage.js"></script>
+
+    <!-- Shared Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
+
   <body>
-    <div
-      class="fullheight"
-      style="
-        background: url(../../style/images/RC_Blur.png) no-repeat center center;
-        background-size: cover;
-      "
-    >
-      <div class="header">
-        <div class="container">
-          <div class="logout">
-            <a href="javascript:void(0);" onclick="history.back()"> Back </a>
-            &nbsp; | &nbsp;
-            <a id="homelink" href="/admin/">Logout</a>
-          </div>
+    <div class="header">
+      <div class="container">
+        <div class="logout">
+          <a href="javascript:void(0);" onclick="history.back()">Back</a>
+          &nbsp; | &nbsp;
+          <a href="/admin/">Home</a>
+          &nbsp; | &nbsp;
+          <a id="homelink" href="/admin/">Logout</a>
         </div>
       </div>
+    </div>
 
-      <div class="middlecontent">
-        <div class="container">
-          <div class="whitesec">
-            <div class="inner-padding">
-              <div class="frm-head">
-                <h4>
-                  <b><u>Admin Management</u></b>
-                </h4>
-              </div>
-              <div class="form">
-                <div class="row">
-                  <div class="col-md-12">
-                    <a
-                      class="btn btn-primary col-md-12 btn-lg"
-                      href="fetchAllAdmins.html"
-                      >Admin Users Management</a
-                    >
-                    <a
-                      class="btn btn-secondary col-md-12 btn-lg"
-                      href="fetchRoles.html"
-                      >Admin Roles Management</a
-                    >
-                  </div>
+    <div class="middlecontent">
+      <div class="container">
+        <div class="whitesec">
+          <div class="inner-padding">
+            <div class="frm-head">
+              <h1>Sudo User Management</h1>
+            </div>
+
+            <div class="form">
+              <div class="row">
+                <div class="col-md-12">
+                  <a class="btn btn-primary col-md-12 btn-lg" href="fetchAllAdmins.html">
+                    Admin Users Management
+                  </a>
+                  <a class="btn btn-secondary col-md-12 btn-lg" href="fetchRoles.html">
+                    Admin Roles Management
+                  </a>
                 </div>
               </div>
             </div>
