--- a/admin/travel/index.html
+++ b/admin/travel/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Admin Management</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Travel Management</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
+    <!-- Additional Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
-    <script src="/sessionstorage.js"></script>
+    <script src="../../sessionstorage.js"></script>
+
+    <!-- Shared Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
+
   <body>
     <div class="header">
       <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
-          &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
+          &nbsp; | &nbsp;
+          <a href="/admin/">Home</a>
+          &nbsp; | &nbsp;
           <a id="homelink" href="/admin/">Logout</a>
         </div>
       </div>
@@ -34,31 +37,23 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h4>
-                <b><u>Travel Management </u></b>
-              </h4>
+              <h1>Travel Management</h1>
             </div>
-            <div class="form">
-              <div class="row">
-                <div class="col-md-12">
-                  <a
-                    class="btn col-md-12 btn-lg btn-demo"
-                    href="fetchUpcomingBookings.html"
-                    >Fetch Upcoming Bookings</a
-                  >
-                  <a
-                    class="btn col-md-12 btn-lg btn-demo"
-                    href="updateBookingStatus.html"
-                    >Update Booking Status</a
-                  >
-                  <a
-                    class="btn col-md-12 btn-lg btn-demo"
-                    href="updateTransactionStatus.html"
-                    >Update Transaction Status</a
-                  >
-                </div>
+
+            <div class="admin-menu">
+              <div class="menu-grid">
+                <a class="menu-btn" href="fetchUpcomingBookings.html">
+                  Fetch Upcoming Bookings
+                </a>
+                <a class="menu-btn" href="updateBookingStatus.html">
+                  Update Booking Status
+                </a>
+                <a class="menu-btn" href="updateTransactionStatus.html">
+                  Update Transaction Status
+                </a>
               </div>
             </div>
+
           </div>
         </div>
       </div>
