--- a/admin/travel/updateBookingStatus.html
+++ b/admin/travel/updateBookingStatus.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Update Booking Status</title>
 
-    <!-- Load jQuery first -->
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-    <!-- Config and Header Scripts -->
-    <script src="../../style/js/config.js"></script>
-    <script src="../../style/js/header.js"></script>
-
-    <!-- Additional Styles and Scripts -->
-
+    <!-- Additional Scripts -->
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
-    <script src="/sessionstorage.js"></script>
+    <script src="../../sessionstorage.js"></script>
     <script src="updateBookingStatus.js"></script>
+
+    <!-- Shared Styles -->
+    <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
 
   <body>
@@ -36,41 +36,54 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h4>
-                <b><u>Update Booking Status</u></b>
-              </h4>
+              <h1>Update Booking Status</h1>
             </div>
+
             <div class="form">
-              <div class="row">
-                <div class="col-md-12">
-                  <form id="updateBookingForm">
-                    <label for="bookingid">Booking ID:</label>
-                    <input
-                      type="text"
-                      id="bookingid"
-                      name="bookingid"
-                      required
-                    />
-                    <label for="status">New Status:</label>
-                    <select id="status" name="status" required>
-                      <option value="confirmed">Confirmed</option>
-                      <option value="admin cancelled">Admin Cancelled</option>
-                      <option value="cancelled">Cancelled</option>
-                      <option value="waiting">Waiting</option>
-                      <option value="pending">Payment Pending</option>
-                    </select>
-                    <label for="AdminComments">Admin Comments:</label>
-                    <input
+              <form id="updateBookingForm">
+                <div class="form-group">
+                  <label for="bookingid">Booking ID:</label>
+                  <input
+                    type="text"
+                    id="bookingid"
+                    name="bookingid"
+                    class="form-control"
+                    placeholder="Enter Booking ID"
+                    required
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="status">New Status:</label>
+                  <select id="status" name="status" class="form-control" required>
+                    <option value="">Select Status</option>
+                    <option value="confirmed">Confirmed</option>
+                    <option value="admin cancelled">Admin Cancelled</option>
+                    <option value="cancelled">Cancelled</option>
+                    <option value="waiting">Waiting</option>
+                    <option value="pending">Payment Pending</option>
+                  </select>
+                </div>
+
+                <div class="form-group">
+                  <label for="adminComments">Admin Comments:</label>
+                  <input
                     type="text"
                     id="adminComments"
                     name="adminComments"
-                    
-                    /> 
-                    <button type="submit">Update Status</button>
-                  </form>
-                  <p id="statusMessage"></p>
+                    class="form-control"
+                    placeholder="Optional comments"
+                  />
                 </div>
-              </div>
+
+                <div class="form-group form-submit">
+                  <button type="submit" class="btn btn-primary">
+                    Update Status
+                  </button>
+                </div>
+              </form>
+
+              <p id="statusMessage" style="margin-top: 10px;"></p>
             </div>
           </div>
         </div>
